--- a/.gitignore
+++ b/.gitignore
@@ -80,11 +80,11 @@ sftp-config.json
 ### VirtualEnv ###
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
-.Python
-[Bb]in
-[Ii]nclude
-[Ll]ib
-[Ss]cripts
-pyvenv.cfg
-pip-selfcheck.json
+#.Python
+#[Bb]in
+#[Ii]nclude
+#[Ll]ib
+#[Ss]cripts
+#pyvenv.cfg
+#pip-selfcheck.json
 env/
